[package]
name = "hello-fluvio"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fluvio = "0.9.9"
async-std = { version = "1", features = ["attributes"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.6"